@@ -18,7 +18,9 @@ udevil (0.4.4-2) UNRELEASED; urgency=medium
     + Add raspberrypi_config.patch -- Merge Raspberry Pi config changes.
     It are more specyfic for Debian.
   * Update debian/copyright.
-  * debian/rules: enable hardening.
+  * debian/rules: 
+    + Enable hardening.
+    + Install devmon@.service in correct place. (Closes: #799745)
 
  -- Mateusz Łukasik <mati75@linuxmint.pl>  Sun, 23 Jul 2017 17:34:21 +0200
 
